@@ -1,2 +1,0 @@
-{% load l10n %}
-<div class="cms-plugin cms-plugin-{{ plugin.id|unlocalize }}">{{ inner }}</div>
